[project]
name = "corneto"
version = "1.0.0.dev7"
description = "CORNETO: A Unified Framework for Omics-Driven Network Inference"
authors = [
    { name = "Pablo Rodriguez-Mier", email = "pablo.rodriguez-mier@uni-heidelberg.de" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
# Add 'dependencies' to the dynamic list
dynamic = ["classifiers", "dependencies"]

[project.urls]
homepage = "https://github.com/saezlab/corneto/"
repository = "https://github.com/saezlab/corneto/"

[project.optional-dependencies]
# Add version specifiers for clarity and consistency
os = [
    "cvxpy-base>=1.6.5",
    "scipy>=1.15.2",
    "highspy>=1.9.0",
    "pyscipopt>=5.4.1" # Using specifier from dev group / tool.poetry.dependencies
]
vanilla = [
    "cvxpy-base>=1.6.5",
    "scipy>=1.15.2"
]

[tool.poetry]
packages = [
    { include = "corneto" },
]
exclude = ["**/tests", "**/docs"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.25"
cvxpy-base = {version = ">=1.6.5", optional = true}
scipy = {version = ">=1.15.2", optional = true}
# Add dependencies that are part of extras, marked as optional
highspy = {version = ">=1.9.0", optional = true}
pyscipopt = {version = "^5.4.1", optional = true}


[tool.poetry.group.dev.dependencies]
# scipy, pyscipopt, cvxpy-base, highspy are also main optional or direct dependencies now,
# but can remain here for dev environment setup if versions differ or for explicitness.
# Poetry will resolve them.
scipy = "^1.15.2"
pyscipopt = "^5.4.1"
graphviz = "^0.20.1"
cobra = "^0.29.0"
networkx = "^3.2.1"
ipython = "^8.7.0"
ipykernel = "^6.23.1"
PICOS = "^2.6.0"
matplotlib = "^3.5.2"
cvxpy-base = "^1.6.5"
highspy = ">=1.9.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pydocstyle = "^6.3.0"
asv = "^0.6.4"
keras = "^3.8.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
swiglpk = "^5.0.12"
pcst-fast = "^1.0.10"
tox = "^4.26.0"
jax = "^0.6.1" # Ensure jax version constraints if needed
bump-my-version = "^1.1.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0"
myst-parser = ">=0.18.1"
pydata-sphinx-theme = ">=0.16.1"
sphinxcontrib-napoleon = ">=0.7"
sphinxcontrib-bibtex = ">=2.5.0"
sphinx-design = ">=0.4.1"
sphinx-favicon = ">=1.0.1"
myst-nb = ">=0.17.2"
sphinx-autodoc-typehints = ">=1.21.8"
sphinx-hoverxref = ">=1.3.0"


[tool.poetry.group."dev,docs".dependencies]
pydot = "^3.0.4"


[tool.ruff]
fix = true

[tool.ruff.lint]
ignore-init-module-imports = true

select = [
    "E",
    "F",
    "W",
    "I",
    "D",
    "RUF",
]

ignore = [
    "D105",
    "D107",
    "D301",
    "D205",
    "D214",
    "D415",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"